--- a/src/module-payu-cl/view/frontend/web/template/payment/multicaja-form.html
+++ b/src/module-payu-cl/view/frontend/web/template/payment/multicaja-form.html
@@ -5,7 +5,7 @@
 		       class="radio"
 		       data-bind="attr: {'id': getCode()}, value:getCode(), checked: isChecked, click:selectPaymentMethod, visible:isRadioButtonVisible()"/>
 		<label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text:getTitle()"></span></label>
-		<img data-bind="attr: {src: getLogoUrl()}">
+		<img data-bind="attr: {src: getLogoUrl()}" style="height: 25px;">
 	</div>
 	<div class="payment-method-content">
 		<div class="payment-method-billing-address">
